Fix team.html popup div population
Changed to inject html code directly when a person's image is clicked. Fixes the problem w/ not showing up popup when user tries to click on it

--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -13,27 +13,28 @@
 </div>
 
 <!--probably going to want to auto-populate this too, keep this for now for testing-->
-<!-- <div class="center">
-  <div class="team-popup" id="test">
+<div class="center">
+  <div class="team-popup" id="popup">
     <div class="left">
-      <div class="name">
+      <div class="name" id="popup_name">
         Test Name
       </div>
-      <div class="name job">
+      <div class="name job" id="popup_job">
         Role: Wiki
       </div>
       <div class="description">
-        <p>
+        <p id="popup_desc">
           stuff about person
         </p>
       </div>
     </div>
     <div class = "right">
-          <div class = "memberPicture">
+          <div class = "memberPicture" id="popup_pic">
+            <img src = "../../static/images/person.png" alt = "profile picture">
           </div>
     </div>
   </div>
-</div> -->
+</div>
 
 <div class="members"></div>
 
