Teaminfo - image and pop up styling (#8)
* major info has been added to the js

* image test

* pop up styling with image styling

* added current updated bios and populated data from the google sheets

* Add example for creating/appending elements

* base javascript code

* Fix team.html popup div population

Changed to inject html code directly when a person's image is clicked. Fixes the problem w/ not showing up popup when user tries to click on it

---------

Co-authored-by: Isabel Lopez Murillo <isaana@email.unc.edu>
Co-authored-by: Isabel Lopez Murillo <97560944+AnaLopezMurillo@users.noreply.github.com>

--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -14,24 +14,24 @@
 
 <!--probably going to want to auto-populate this too, keep this for now for testing-->
 <div class="center">
-  <div class="team-popup" id="test">
+  <div class="team-popup" id="popup">
     <div class="left">
-      <div class="name">
+      <div class="name" id="popup_name">
         Test Name
       </div>
-      <div class="name job">
+      <div class="name job" id="popup_job">
         Role: Wiki
       </div>
       <div class="description">
-        <p>
+        <p id="popup_desc">
           stuff about person
         </p>
       </div>
     </div>
     <div class = "right">
-      <div class = "personImg">
-          <img src = #>
-      </div>
+          <div class = "memberPicture" id="popup_pic">
+            <img src = "../../static/images/person.png" alt = "profile picture">
+          </div>
     </div>
   </div>
 </div>
