--- a/wiki/pages/contribution.html
+++ b/wiki/pages/contribution.html
@@ -5,6 +5,10 @@
 
 {% block page_content %}
 
+<div>
+  <img src="../../static/attributions_graphic.svg">
+</div>
+
 <div class="row mt-4">
   <div class="col">
     <div class="bd-callout bd-callout-info">
