added images for both the team page and the popup. fixed formatting

--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -30,7 +30,7 @@
     </div>
     <div class = "right">
           <div class = "memberPicture" id="popup_pic">
-            <img src = "../../static/images/person.png" alt = "profile picture">
+            <!-- <img src = "../../static/images/person.png" alt = "profile picture" id = "thisThePicture"> -->
           </div>
     </div>
   </div>
