Add particles.js, some home styling
image logo, started scroll reveal sticky background (yellow)

--- a/wiki/pages/home.html
+++ b/wiki/pages/home.html
@@ -5,7 +5,36 @@
 
 {% block page_content %}
 
-<div class="row">
+<div id="particles-js"></div>
+
+<img class='ff-logo' src="https://static.igem.wiki/teams/5192/home-page/ff-logo.webp">
+
+<div class="fixed-content">
+  <div class="fixed-text" style="display: flex; justify-content: center; align-items: center; height: 100%; color: white;">
+      Fixed Background
+  </div>
+</div>
+
+<!-- Scrollable sections with different heights -->
+<div class="section" style="height: 150vh;">
+  <div class="content">
+      Scroll Div 1
+  </div>
+</div>
+
+<div class="section" style="height: 200vh;">
+  <div class="content">
+      Scroll Div 2
+  </div>
+</div>
+
+<div class="section" style="height: 100vh;">
+  <div class="content">
+      Scroll Div 3
+  </div>
+</div>
+
+<!-- <div class="row">
   <div class="col">
     <h2>Before you start</h2>
     <hr>
@@ -55,6 +84,6 @@
       <li><a href="https://2020.igem.org/Team:TAS_Taipei">2020 TAS Taipei </a></li>
     </ul>
   </div>
-</div>
+</div> -->
 
 {% endblock %}
