--- a/wiki/layout.html
+++ b/wiki/layout.html
@@ -3,6 +3,7 @@
 
 <head>
   <!-- Required meta tags -->
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="https://static.igem.wiki/common/icons/favicons/igem-2022.svg" />
@@ -17,6 +18,7 @@
 
   <!--Custom Javascript-->
   <script src="{{ url_for('static', filename = 'index.js') }}" defer></script>
+  <script src="{{ url_for('static', filename = 'particles.js-master/particles.js') }}"></script>
 
   <title>
     {% block title %} {% endblock %} | Example - iGEM 2023
