Redefine home container
it took having to change the app home render path to have no margin on the home page lol

--- a/wiki/layout.html
+++ b/wiki/layout.html
@@ -43,7 +43,7 @@
   </header> -->
 
   <!-- Page Content -->
-  <div class="container">
+  <div class="container {% if page_name == 'home' %}no-margin{% endif %}">
     {% block page_content %}{% endblock %}
   </div>
 
