--- a/wiki/pages/home.html
+++ b/wiki/pages/home.html
@@ -5,34 +5,39 @@
 
 {% block page_content %}
 
+<div class="home-container">
+
+  <img class='ff-logo' src="https://static.igem.wiki/teams/5192/home-page/ff-logo.webp">
+
+  <div class="fixed-content">
+    <div class="fixed-text" style="display: flex; justify-content: center; align-items: center; height: 100%; color: white;">
+        Fixed Background
+    </div>
+  </div>
+
+  <!-- Scrollable sections with different heights -->
+  <div class="section">
+    <div class="content">
+        Scroll Div 1
+    </div>
+  </div>
+
+  <div class="section" >
+    <div class="content">
+        Scroll Div 2
+    </div>
+  </div>
+
+  <div class="section" >
+    <div class="content">
+        Scroll Div 3
+    </div>
+  </div>
+
+</div>
+
 <div id="particles-js"></div>
 
-<img class='ff-logo' src="https://static.igem.wiki/teams/5192/home-page/ff-logo.webp">
-
-<div class="fixed-content">
-  <div class="fixed-text" style="display: flex; justify-content: center; align-items: center; height: 100%; color: white;">
-      Fixed Background
-  </div>
-</div>
-
-<!-- Scrollable sections with different heights -->
-<div class="section" style="height: 150vh;">
-  <div class="content">
-      Scroll Div 1
-  </div>
-</div>
-
-<div class="section" style="height: 200vh;">
-  <div class="content">
-      Scroll Div 2
-  </div>
-</div>
-
-<div class="section" style="height: 100vh;">
-  <div class="content">
-      Scroll Div 3
-  </div>
-</div>
 
 <!-- <div class="row">
   <div class="col">
