Fix footer styling
Make section 2 transparent as well

--- a/wiki/pages/home.html
+++ b/wiki/pages/home.html
@@ -6,6 +6,8 @@
 {% block page_content %}
 
 <div class="home-container">
+  <div id="particles-js"></div>
+
 
   <img class='ff-logo' src="https://static.igem.wiki/teams/5192/home-page/ff-logo.webp">
 
@@ -15,29 +17,22 @@
     </div>
   </div>
 
-  <!-- Scrollable sections with different heights -->
-  <div class="section">
+  <div class="section mt-0 s1">
     <div class="content">
-        Scroll Div 1
+       
     </div>
   </div>
 
-  <div class="section" >
-    <div class="content">
-        Scroll Div 2
-    </div>
+  <div class="section s2">
   </div>
 
-  <div class="section" >
+  <div class="section s3" >
     <div class="content">
         Scroll Div 3
     </div>
   </div>
 
 </div>
-
-<div id="particles-js"></div>
-
 
 <!-- <div class="row">
   <div class="col">
