Add graphic test

--- a/wiki/pages/home.html
+++ b/wiki/pages/home.html
@@ -19,7 +19,7 @@
 
   <div class="section mt-0 s1">
     <div class="content">
-       
+       <img src="https://static.igem.wiki/teams/5192/home-page/nc-graphic.png">
     </div>
   </div>
 
