Add rest of pfas graphics + minor particles change

--- a/wiki/pages/home.html
+++ b/wiki/pages/home.html
@@ -49,8 +49,21 @@
         <img src="https://static.igem.wiki/teams/5192/home-page/pfas-lightblue.png" style="position: fixed;
         bottom:-7vw;
         transform: rotate(-30deg);">
-        <img src="https://static.igem.wiki/teams/5192/home-page/pfas-lightblue.png" class="pfas-blue">
-
+        <img src="https://static.igem.wiki/teams/5192/home-page/pfas-lightblue.png" style="position: fixed;
+        top:17vh;
+        right:-7vw; 
+        width: 400px;
+        transform: rotate(20deg);">
+        <img src="https://static.igem.wiki/teams/5192/home-page/pfas-lightblue.png" style="position: fixed;
+        bottom:0vw;
+        left:30vw;
+        width: 400px;
+        transform: rotate(-160deg);">
+        <img src="https://static.igem.wiki/teams/5192/home-page/pfas-lightblue.png" style="position: fixed;
+        bottom:-10vw;
+        left:-14vh;
+        width: 350px;
+        transform: rotate(-30deg);">
       </div>
       <div class="yellow-fixed-txt">
         <div class="home-text">
