Add description page button

--- a/wiki/pages/home.html
+++ b/wiki/pages/home.html
@@ -72,7 +72,6 @@
         <div class="home-text">
           They can cause medical conditions like <span ><a class="home-callout" link="https://factor.niehs.nih.gov/2019/3/feature/2-feature-pfas">malignant cancerous tumors, cholestoral diseases, and thyroid disease</a></span>. 
         </div>
-
       </div>
     </div>
   </div>
@@ -95,8 +94,38 @@
 
   <div class="section s3" >
     <div class="content">
-        Scroll Div 3
+      <div class="home-text">
+        At <span class="home-callout">UNC-Chapel Hill</span>, we aim to develop a therapeutic that focuses on pharmacological applications to regulate PFAS concentrations, specifically PFOA, in the body.
+        <br> <br>
+        We focus on designing a novel approach to eliminate this contaminant from the body by engineering a <span class="home-callout">chimeric protein</span> with two domains: one with a high affinity for PFOA and the other facilitating transcytosis of the whole peptide.
+      </div>
+      <img class="wizard" src="https://static.igem.wiki/teams/5192/home-page/wizard-stir.webp">
     </div>
+    </div>
+
+  <div class="section s4">
+    <div class="content">
+      <img class="wizard" id="wizard-triumphant" src="https://static.igem.wiki/teams/5192/home-page/wizard-triump.webp">
+      <div class="home-text">
+        Our protein is designed to bond to PFOA and removes it from the bloodstream to be excreted through the mucosal system.
+        <br><br>
+        The result is an <span class="home-callout">injectable and fast-acting</span> treatment that keeps PFAS levels low and provides relief effectively. 
+      </div>
+    </div>
+  </div>
+
+  <div class="section s5">
+    <div class="content"> 
+      <div class="home-text">
+        Learn more in our description page!
+      </div>
+    </div>
+    <div class="button-container">
+      <a href="{{ url_for('description_page') }}" class="custom-button">Description Page</a>
+  </div>
+
+  </div>
+
   </div>
 
 </div>
