team image fixed

--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -8,9 +8,10 @@
   <h1 class="text-center header-text">TEAM</h1>
 </div>
 
-<div class = "big_group_picture">
+<!-- <div class = "big_group_picture">
 
-</div>
+</div> -->
+<img class = "big_group_picture" src = "https://static.igem.wiki/teams/5192/fullteam.png">;
 
 <!--probably going to want to auto-populate this too, keep this for now for testing-->
 <div class="center">
