--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -8,9 +8,10 @@
   <h1 class="text-center header-text">TEAM</h1>
 </div>
 
-<div class = "big_group_picture">
-**big group team picture
-</div>
+<!-- <div class = "big_group_picture">
+
+</div> -->
+<img class = "big_group_picture" src = "https://static.igem.wiki/teams/5192/fullteam.png">;
 
 <!--probably going to want to auto-populate this too, keep this for now for testing-->
 <div class="center">
@@ -30,7 +31,7 @@
     </div>
     <div class = "right">
           <div class = "memberPicture" id="popup_pic">
-            <img src = "../../static/images/person.png" alt = "profile picture">
+            <!-- <img src = "../../static/images/person.png" alt = "profile picture" id = "thisThePicture"> -->
           </div>
     </div>
   </div>
