Switch bookmark to external iGEM link

--- a/wiki/pages/attributions.html
+++ b/wiki/pages/attributions.html
@@ -7,6 +7,10 @@
 
 <div class="row mt-4">
   <div class="col">
+    <div>
+      <img src="../../static/attributions_graphic.svg">
+    </div>
+
     <div class="bd-callout bd-callout-info">
       <h4>Bronze Medal Criterion #2</h4>
       <p>Describe what work your team members did and what other people did for your project.</p>
