Add Harshal bio + silver medal on home pg

--- a/wiki/pages/home.html
+++ b/wiki/pages/home.html
@@ -76,6 +76,17 @@
     </div>
   </div>
 
+  <div class="section mt-0 s1 medal">
+    <div class="content ">
+      <div class="home-text">
+        We are excited to announce that UNC iGEM has won <span class="home-callout">silver medal</span> at the 2024 iGEM grand jamboree!
+      </div>
+      <br>
+      <img id="medal" src="https://static.igem.org/websites/competition/2024/icons/medals/medal-silver-flat.svg
+      ">
+    </div>
+  </div>
+
   <div class="section mt-0 s1">
     <div class="content">
       <div class="home-text">
